fixes for ant nests